update repository URLs to reflect transfer of repository ownership

--- a/infrastructure/test-alt/common/iam.cfn/cfngin.yml
+++ b/infrastructure/test-alt/common/iam.cfn/cfngin.yml
@@ -6,7 +6,7 @@ sys_path: ./../../../
 tags:
   Environment: ${environment}
   Namespace: ${namespace}
-  Repository: https://github.com/onicagroup/runway
+  Repository: https://github.com/rackspace/runway
 
 stacks:
   - name: test-runner-boundary
