--- a/quickstarts/conduit/runway.yml
+++ b/quickstarts/conduit/runway.yml
@@ -1,4 +1,4 @@
-# See full syntax at https://github.com/onicagroup/runway
+# See full syntax at https://github.com/rackspace/runway
 
 deployments:
   - modules:
