--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
   "Topic :: Utilities",
 ]
 description = "Simplify infrastructure/app testing/deployment"
-documentation = "https://docs.onica.com/projects/runway"
+documentation = "https://runway.readthedocs.io"
 homepage = "https://github.com/onicagroup/runway"
 keywords = ["cli"]
 license = "Apache-2.0"
