--- a/package.json
+++ b/package.json
@@ -55,5 +55,6 @@
   "scripts": {
     "postinstall": "node ./postinstall.js",
     "preuninstall": "node ./preuninstall.js"
-  }
+  },
+  "version": "0.0.0"
 }
