--- a/.github/workflows/on-push-pyinstaller.yml
+++ b/.github/workflows/on-push-pyinstaller.yml
@@ -38,6 +38,7 @@ jobs:
       - name: 🏗 Setup Python
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
+          poetry-install: false
           poetry-plugins: poetry-dynamic-versioning
           python-version: ${{ matrix.python-version }}
       # Remove apt repos that are known to break from time to time
@@ -79,6 +80,7 @@ jobs:
       - name: 🏗 Setup Python
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
+          poetry-install: false
           poetry-plugins: poetry-dynamic-versioning
           python-version: ${{ matrix.python-version }}
       # Remove apt repos that are known to break from time to time
@@ -106,7 +108,7 @@ jobs:
     needs:
       - build-pyinstaller-onefolder
     env:
-      NODE_VERSION: 18
+      NODE_VERSION: 20
       NPM_PACKAGE_NAME: '@onica/runway'
     strategy:
       fail-fast: false
@@ -127,6 +129,7 @@ jobs:
       - name: 🏗 Setup Python
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
+          poetry-install: false
           poetry-plugins: poetry-dynamic-versioning
           python-version: ${{ matrix.python-version }}
       - name: 🏗 Setup Node
