adjust build process to cleanup `.venv` on GitHub

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,15 @@
 root = true
 
 [*]
+charset = utf-8
 end_of_line = lf
-indent_size = 4
+indent_size = 2
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{html,js,jsx,md,rst,toml,ts,xml,yml,yaml}]
-indent_size = 2
-
-[*.py]
-charset = utf-8
-
-[*.rst]
-indent_size = 2
+[{*.{json,py},Makefile}]
+indent_size = 4
 
 [Makefile]
 indent_style = tab
