--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ repository = "https://github.com/onicagroup/runway"
 [tool.poetry.dependencies]
 python = ">=3.9, <3.13"
 awacs = "*"
-boto3 = "^1.16"
+boto3 = "^1.34.50"
 cfn-lint = "*"
 cfn_flip = "^1.2"  # only used in runway._cli.commands._gen_sample.utils
 click = "^8.0"
@@ -55,30 +55,16 @@ send2trash = "*"
 tomli = ">=1.2.2"
 troposphere = ">=2.4, <5"
 typing_extensions = "*"  # only really needed for < 3.8 but can still be used in >= 3.8
-urllib3 = "*"  # allow us to follow botocore's hard pinning without needing to update our own
 yamllint = "*"
 
 [tool.poetry.group.dev.dependencies]
-coverage = {extras = ["toml"], version = ">=6.3"}
-doc8 = ">=0.10"  # for linting with vscode rst extension
-mock = ">=4.0"
-moto = {extras = ["ec2", "ecs", "iam", "s3", "ssm"], version = "^3.0.5"}
-pipenv = "^2022.1.8"  # only used in tests
 pre-commit = "^3.7.1"
 pyinstaller = "^6.2.0"
-pytest = ">=7.0"
-pytest-cov = ">=3.0"  # pytest plugin
-pytest-mock = ">=3.7"  # pytest plugin
-pytest-order = ">=1"  # pytest plugin
-pytest-subprocess = ">=1.4"  # pytest plugin
-pytest-sugar = ">=0.9"  # pytest plugin
-pytest-xdist = ">=2.5"  # pytest plugin
 semver = "^2.13"  # only used in .github/scripts/urlshortener
-testfixtures = "^7.0.3"  # TODO remove use of this dependency - was inherited
-tomli-w = ">=1.0"
 
 [tool.poetry.group.docs.dependencies]
-jsx-lexer = "^1.0"
+doc8 = ">=0.10"  # for linting with vscode rst extension
+jsx-lexer = "^2.0.1"
 sphinx = "^4.3"
 sphinx-github-changelog = "^1.1"
 sphinx-rtd-theme = "^1.0"
@@ -87,11 +73,27 @@ sphinxcontrib-apidoc = "^0.3"
 sphinxcontrib-programoutput = "^0.17"
 
 [tool.poetry.group.lint.dependencies]
-black = "^24.4.2"
-ruff = "^0.5.4"
+black = "^24.8.0"
+ruff = "^0.5.7"
+
+[tool.poetry.group.test.dependencies]
+coverage = {extras = ["toml"], version = "^7.6.1"}
+moto = {extras = ["ec2", "ecs", "iam", "s3", "ssm"], version = "^5.0.12"}
+pipenv = "^2022.1.8"  # only used in tests
+pytest = "^8.3.2"
+pytest-cov = "^5.0.0"
+pytest-mock = "^3.14.0"
+pytest-order = "^1.2.1"
+pytest-rerunfailures = "^11.1.2"
+pytest-subprocess = "^1.5.2"
+pytest-sugar = ">=1.0.0"
+pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}
+requests-mock = "^1.12.1"
+testfixtures = "^8.3.0"  # TODO (kyle) remove use of this dependency - was inherited
+tomli-w = "^1.0.0"
 
 [tool.poetry.group.types.dependencies]
-mypy-boto3 = "^1.16"  # importable boto3 type annotations
+mypy-boto3 = "^1.34.158"  # importable boto3 type annotations
 
 [tool.poetry.group.types.dependencies.boto3-stubs]
 extras = [
@@ -112,7 +114,7 @@ extras = [
   "ssm",
   "sts",
 ]
-version = "^1.16"
+version = "^1.34.158"
 
 [tool.poetry.scripts]
 runway = "runway._cli.main:cli"
@@ -170,7 +172,7 @@ omit = [
 
 [tool.poetry-dynamic-versioning]  # poetry self add "poetry-dynamic-versioning[plugin]"
 bump = true
-enable = true
+enable = false
 fix-shallow-repository = true
 metadata = false
 strict = true
