--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -106,6 +106,7 @@ jobs:
   lint-python:
     name: Lint Python
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.9, '3.10', '3.11']
         os: [ubuntu-latest, windows-latest]
@@ -183,6 +184,7 @@ jobs:
   test-python:
     name: Test Python
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.9, '3.10', '3.11']
         os: [ubuntu-latest, windows-latest]
