--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ yamllint = "*"
 
 [tool.poetry.group.build.dependencies]
 pyinstaller = "^6.2.0"
+wheel = "^0.42.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
@@ -66,7 +67,7 @@ semver = "^2.13"  # only used in .github/scripts/urlshortener
 
 [tool.poetry.group.docs.dependencies]
 doc8 = ">=0.10"  # for linting with vscode rst extension
-jsx-lexer = "^2.0.1"
+jsx-lexer = "^1.0"
 sphinx = "^4.3"
 sphinx-github-changelog = "^1.1"
 sphinx-rtd-theme = "^1.0"
@@ -75,23 +76,21 @@ sphinxcontrib-apidoc = "^0.3"
 sphinxcontrib-programoutput = "^0.17"
 
 [tool.poetry.group.lint.dependencies]
-black = "^24.8.0"
-ruff = "^0.5.7"
+black = "^24.4.2"
+ruff = "^0.5.4"
 
 [tool.poetry.group.test.dependencies]
-coverage = {extras = ["toml"], version = "^7.6.1"}
+coverage = {extras = ["toml"], version = ">=6.3"}
 moto = {extras = ["ec2", "ecs", "iam", "s3", "ssm"], version = "^5.0.12"}
 pipenv = "^2022.1.8"  # only used in tests
-pytest = "^8.3.2"
-pytest-cov = "^5.0.0"
-pytest-mock = "^3.14.0"
-pytest-order = "^1.2.1"
-pytest-rerunfailures = "^11.1.2"
-pytest-subprocess = "^1.5.2"
+pytest = ">=7.0"
+pytest-cov = ">=3.0"
+pytest-mock = ">=3.7"
+pytest-order = ">=1"
+pytest-subprocess = ">=1.4"
 pytest-sugar = ">=1.0.0"
-pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}
-requests-mock = "^1.12.1"
-testfixtures = "^8.3.0"  # TODO (kyle) remove use of this dependency - was inherited
+pytest-xdist = {extras = ["psutil"], version = ">=2.5"}
+testfixtures = "^7.0.3"  # TODO (kyle) remove use of this dependency - was inherited
 tomli-w = "^1.0.0"
 
 [tool.poetry.group.types.dependencies]
