--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ pyinstaller = "^6.2.0"
 wheel = "^0.42.0"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^3.7.1"
+pre-commit = "^3.8.0"
 semver = "^2.13"  # only used in .github/scripts/urlshortener
 
 [tool.poetry.group.docs.dependencies]
@@ -80,16 +80,16 @@ black = "^24.8.0"
 ruff = "^0.5.7"
 
 [tool.poetry.group.test.dependencies]
-coverage = {extras = ["toml"], version = ">=6.3"}
+coverage = {extras = ["toml"], version = "^7.6.1"}
 moto = {extras = ["ec2", "ecs", "iam", "s3", "ssm"], version = "^5.0.12"}
 pipenv = "^2022.1.8"  # only used in tests
-pytest = ">=7.0"
-pytest-cov = ">=3.0"
-pytest-mock = ">=3.7"
-pytest-order = ">=1"
-pytest-subprocess = ">=1.4"
-pytest-sugar = ">=1.0.0"
-pytest-xdist = {extras = ["psutil"], version = ">=2.5"}
+pytest = "^8.3.2"
+pytest-cov = "^5.0.0"
+pytest-mock = "^3.14.0"
+pytest-order = "^1.2.1"
+pytest-subprocess = "^1.5.2"
+pytest-sugar = "^1.0.0"
+pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}
 testfixtures = "^7.0.3"  # TODO (kyle) remove use of this dependency - was inherited
 tomli-w = "^1.0.0"
 
