--- a/.github/workflows/on-push-pyinstaller.yml
+++ b/.github/workflows/on-push-pyinstaller.yml
@@ -39,7 +39,7 @@ jobs:
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
           poetry-install: false
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
           python-version: ${{ matrix.python-version }}
       # Remove apt repos that are known to break from time to time
       # See https://github.com/actions/virtual-environments/issues/323
@@ -81,7 +81,7 @@ jobs:
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
           poetry-install: false
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
           python-version: ${{ matrix.python-version }}
       # Remove apt repos that are known to break from time to time
       # See https://github.com/actions/virtual-environments/issues/323
@@ -130,7 +130,7 @@ jobs:
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
           poetry-install: false
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
           python-version: ${{ matrix.python-version }}
       - name: 🏗 Setup Node
         uses: actions/setup-node@v4
