--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: 🏗 Setup Python
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
           python-version: ${{ matrix.python-version }}
       # Remove apt repos that are known to break from time to time
       # See https://github.com/actions/virtual-environments/issues/323
@@ -74,7 +74,7 @@ jobs:
       - name: 🏗 Setup Python
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
           python-version: ${{ matrix.python-version }}
       # Remove apt repos that are known to break from time to time
       # See https://github.com/actions/virtual-environments/issues/323
@@ -116,7 +116,7 @@ jobs:
       - name: 🏗 Setup Python
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
           python-version: ${{ matrix.python-version }}
       - name: 🏗 Setup Node
         uses: actions/setup-node@v4
@@ -204,7 +204,7 @@ jobs:
       - name: 🏗 Setup Python
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
       # Remove apt repos that are known to break from time to time
       # See https://github.com/actions/virtual-environments/issues/323
       - name: Remove broken apt repos (ubuntu)
@@ -238,7 +238,7 @@ jobs:
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
           poetry-install: false
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
       - name: 🚀 Publish Distribution 📦 to PyPI
         env:
           POETRY_PYPI_TOKEN_PYPI: ${{ secrets.pypi_password }}
@@ -294,7 +294,7 @@ jobs:
       - name: 🏗 Setup Python
         uses: finleyfamily/action-setup-python@v1.0.0
         with:
-          poetry-plugins: poetry-dynamic-versioning
+          poetry-plugins: poetry-dynamic-versioning[plugin]
       - name: 🏗 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
