--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,13 +65,17 @@ pre-commit = "^3.8.0"
 semver = "^2.13"  # only used in .github/scripts/urlshortener
 
 [tool.poetry.group.docs.dependencies]
-doc8 = ">=0.10"  # for linting with vscode rst extension
-jsx-lexer = "^1.0"
-sphinx = "^4.3"
-sphinx-github-changelog = "^1.1"
-sphinx-rtd-theme = "^1.0"
-sphinx-tabs = "^3.2"
-sphinxcontrib-apidoc = "^0.3"
+doc8 = "^1.1.1"
+furo = "^2024.8.6"
+jsx-lexer = "^2.0.1"
+sphinx = "^7.4.7"
+sphinx-copybutton = "^0.5.2"
+sphinx-design = "^0.6.1"
+sphinx-github-changelog = "^1.4.0"
+sphinx-notfound-page = "^1.0.4"
+sphinxcontrib-apidoc = "^0.5.0"
+sphinxcontrib-external-links = "^0.1.1"
+sphinxcontrib-jquery = "^4.1"
 sphinxcontrib-programoutput = "^0.17"
 
 [tool.poetry.group.lint.dependencies]
@@ -172,7 +176,7 @@ omit = [
 
 [tool.poetry-dynamic-versioning]  # poetry self add "poetry-dynamic-versioning[plugin]"
 bump = true
-enable = false
+enable = true
 fix-shallow-repository = true
 metadata = false
 strict = true
