--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -129,7 +129,7 @@ jobs:
           poetry-plugins: poetry-dynamic-versioning[plugin]
           python-version: ${{ matrix.python-version }}
       - name: ⤵️ Install Node Dependencies
-        run: make npm-ci
+        run: make setup-npm
       - name: 🚀 Run Linters
         run: make lint
   pre-commit:
@@ -209,7 +209,7 @@ jobs:
           poetry-plugins: poetry-dynamic-versioning[plugin]
           python-version: ${{ matrix.python-version }}
       - name: ⤵️ Install Node Dependencies
-        run: make npm-install
+        run: make setup-npm
       - name: 🏗 Configure Pagefile  # avoid MemoryError during tests
         if: runner.os == 'Windows'
         uses: al-cheb/configure-pagefile-action@v1.4  # cspell:ignore cheb
