update pyright, fix type check errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -200,14 +200,13 @@ pythonPlatform = "All"
 pythonVersion = "3.9"
 reportDuplicateImport = "none"
 reportImportCycles = "none"
-reportIncompatibleMethodOverride = "warning"
 reportMissingTypeStubs = "none"
 reportPrivateUsage = "none"
 reportUnknownMemberType = "none"
 reportUnnecessaryIsInstance = "warning"
+reportUnnecessaryTypeIgnoreComment = "error"
 reportUnusedImport = "none"
 reportUnusedVariable = "none"
-reportWildcardImportFromLibrary = "none"
 strictParameterNoneValue = false
 typeCheckingMode = "strict"
 useLibraryCodeForTypes = true
