--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -77,6 +77,9 @@
   - name: release
     color: e4e669
     description: A release task or pull request
+  - name: renovate
+    color: 73afae  # cspell:disable-line
+    description: Issue or PR opened by renovate
   - name: status:abandoned
     color: '000000'
     description: Issue or pull request abandoned by author
