use `autodoc-pydantic` to improve documentation of `pydantic` models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ yamllint = "*"
 pre-commit = "^3.8.0"
 
 [tool.poetry.group.docs.dependencies]
+autodoc-pydantic = "^2.2.0"
 doc8 = "^1.1.1"
 furo = "^2024.8.6"
 jsx-lexer = "^2.0.1"
